# sandcastle

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  action.yml  demo.tape
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  demo.yml  release.yml
crates/sandcastle-audit/: Cargo.toml
crates/sandcastle-audit/src/: error.rs  event.rs  export.rs  fingerprint.rs  lib.rs  logger.rs  risk.rs  store.rs  violation.rs
crates/sandcastle-cli/: Cargo.toml
crates/sandcastle-cli/src/: main.rs
crates/sandcastle-cli/src/commands/: audit.rs  compare.rs  diff.rs  init.rs  mod.rs  monitor.rs  policy.rs  profiles.rs  registry.rs  risk.rs  run.rs  snapshot.rs  undo.rs  validate.rs
crates/sandcastle-fs/: Cargo.toml
crates/sandcastle-fs/src/: bind.rs  cow.rs  error.rs  guard.rs  isolation.rs  lib.rs  overlay.rs  tmpfs.rs
crates/sandcastle-gpu/: Cargo.toml
crates/sandcastle-gpu/src/: detect.rs  error.rs  gpu_pv.rs  guard.rs  lib.rs  nvproxy.rs  passthrough.rs  vfio.rs
crates/sandcastle-network/: Cargo.toml
crates/sandcastle-network/src/: allowlist.rs  dns.rs  egress.rs  error.rs  filter.rs  lib.rs  tls.rs
crates/sandcastle-platform/: Cargo.toml
crates/sandcastle-platform/src/: error.rs  lib.rs  linux.rs  macos.rs  sandbox.rs  windows.rs
crates/sandcastle-policy/: Cargo.toml
crates/sandcastle-policy/src/: error.rs  filter.rs  lib.rs  permission.rs  profile.rs  resolver.rs
crates/sandcastle-snapshot/: Cargo.toml
crates/sandcastle-snapshot/src/: branch.rs  diff.rs  error.rs  lib.rs  manifest.rs  snapshot.rs  store.rs
docs/: ci-usage.md
editors/vscode/: README.md  package.json
editors/vscode/src/: extension.ts
