[package]
name = "sandcastle-cli"
version = "0.1.0"
edition.workspace = true
description = "OS-level sandbox for AI agents — zero config, single binary, no Docker"
repository = "https://github.com/openshield-dev/sandcastle"
homepage = "https://github.com/openshield-dev/sandcastle"
license = "Apache-2.0"
readme = "../../README.md"
keywords = ["sandbox", "ai-agent", "security", "isolation", "claude"]
categories = ["command-line-utilities", "os"]

[[bin]]
name = "sandcastle"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
sandcastle-policy = { path = "../sandcastle-policy" }
sandcastle-platform = { path = "../sandcastle-platform" }
sandcastle-fs = { path = "../sandcastle-fs" }
sandcastle-network = { path = "../sandcastle-network" }
sandcastle-snapshot = { path = "../sandcastle-snapshot" }
sandcastle-gpu = { path = "../sandcastle-gpu" }
sandcastle-audit = { path = "../sandcastle-audit" }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
