[package]
name = "sandcastle-fs"
version = "0.1.0"
edition.workspace = true
description = "Filesystem isolation, path allowlisting, and virtual overlay management for SandCastle"

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
sandcastle-policy = { path = "../sandcastle-policy" }
sandcastle-audit = { path = "../sandcastle-audit" }
tempfile = "3"
