[package]
name = "sandcastle-platform"
version = "0.1.0"
edition.workspace = true
description = "Platform-specific OS isolation primitives (namespaces, job objects) for SandCastle"

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
sandcastle-policy = { path = "../sandcastle-policy" }
sandcastle-audit = { path = "../sandcastle-audit" }
uuid = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
nix = { version = "0.29", features = ["fs", "mount", "sched", "signal", "user"] }
landlock = "0.4"

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_System_JobObjects",
    "Win32_Security",
    "Win32_Foundation",
    "Win32_Security_AppLocker",
    "Win32_System_Threading",
] }
