[package]
name = "sandcastle-policy"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Policy definition, parsing, and enforcement for SandCastle sandboxes"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
glob = "0.3"
